# advent-of-code

./: .gitignore  LICENSE  README.md
2022/rust/: Cargo.toml  encode-input-day.sh
2022/rust/src/: main.rs
2022/rust/src/day03/: mod.rs  puzzle1.txt.gpg
2022/rust/src/day04/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day05/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day06/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day07/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day07_vec_path/: example.txt  mod.rs  puzzle1.txt
2022/rust/src/day08/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day09/: example1.txt.gpg  example2.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day10/: example1.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day11/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day12/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day13/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day14/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day15/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day16/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day17/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day18/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day19/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day20/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day21/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2022/rust/src/day22/: example.txt.gpg  mod.rs  puzzle1.txt.gpg
2023/zig/: build.zig  (+1 more)
(+240 files in other folders)
